TAG: feindexer-5-1-8-3
DATE: 05/29/14
STAFF: kstone
CHANGES: fix for GXDLitIndex content stream error

TAG: feindexer-tr11654-BP
DATE: 05/14/14
STAFF: pf
CHANGES: branch point for TR11654 development

TAG: feindexer-5-1-8-2
TAG: feindexer-5-1-8-1
DATE: 04/28/2014
STAFF: kstone
CHANGES:
1) 5.18 release

TAG: feindexer-tr11560-BP
DATE: 03/17/2014
STAFF: jsb
CHANGES:
1) branch point for TR11560 (Feature Relationships release) - team scrum-bob

TAG: feindexer-5-1-7-1
DATE: 02/05/2014
STAFF: jsb
CHANGES:
1) merged changes from tr11468 branch (GXD Anatomy) to trunk

TAG: feindexer-5-1-6-9
DATE: 01/16/2014
STAFF: jsb
CHANGES:
1) changed ConnectionTimeout in Indexer.java from 100 sec to 200 sec to help avoid IOException errors in gxdLitIndex

TAG: feindexer-5-1-6-8
DATE: 1/8/2014
STAFF: dbm
CHANGES:
1) buildAllIndexesParallel: move gxdLitIndex to LARGE_IO_INDEXES

TAG: feindexer-5-1-6-1,feindexer-5-1-6-2,feindexer-5-1-6-3,feindexer-5-1-6-4,feindexer-5-1-6-5,feindexer-5-1-6-6,feindexer-5-1-6-7
DATE: 11/20/2013
STAFF: kstone
CHANGES: 
1) TR11423 (Disease Portal)
2) upgrade to Solr 4.5.1
3) retire sequence indexer (using hibernate solution in fewi now)
4) fix for temp table bug when running indexes in parallel (added config to run them separately)
5) fix Alpha bugs
6) Fixing install bug on mtdoom

TAG: feindexer-tr11468-BP
DATE: 10/07/2013
STAFF: jsb
CHANGES: 
1) branch point for GXD Anatomy project (TR11468, team scrum-bob)

TAG: feindexer-5-1-5-5
TAG: feindexer-5-1-5-4
DATE: 09/23/2013
STAFF: jsb
CHANGES: 
1) updated MPAnnotationIndexer to do less logging, as it was hanging at the
   point that it reached 16kb of logs
2) updated buildAllIndexesParallel to include note about #1 above
3) updated BUILD_SCRIPT config setting to point to parallel version

TAG: feindexer-5-1-5-3
DATE: 09/13/2013
STAFF: jsb
CHANGES: 
1) MPAnnotationIndexer still won't play well with buildAllIndexes in parallel,
   as it inexplicably hangs partway through parsing query results.  Can't find