@@ -37,5 +37,5 @@
 	<classpathentry kind="lib" path="lib/solr-dataimporthandler-extras-4.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/solr-solrj-4.5.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib_java_fe"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
